@@ -5,7 +5,7 @@ require 'RMagick'
 
 ballerina = Magick::Image.read('images/Ballerina.jpg').first
 ballerina.scale!(250.0/ballerina.rows)
-bordered = ballerina.border(10,10,'HotPink2')
-#bordered.display
-bordered.write('border.jpg')
+ballerina.border!(10,10,'HotPink2')
+#ballerina.display
+ballerina.write('border.jpg')
 exit
