@@ -11,7 +11,7 @@ jj2 = jj.emboss
 # Make a before-and-after composite
 jj2.crop!(jj2.columns/2, 0, jj2.columns/2, jj2.rows)
 jj = jj.composite(jj2, Magick::EastGravity, Magick::OverCompositeOp)
-jj = jj.border(1,1,'black')
+jj.border!(1,1,'black')
 
 #jj.display
 jj.write('emboss.jpg')
